# openGLESbook

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: list.json
app/src/main/assets/shader/: cube_mapping_skybox_fs.glsl  cube_mapping_skybox_vs.glsl  cube_mapping_teapot_fs.glsl  cube_mapping_teapot_vs.glsl  disp_mapping_fs.glsl  disp_mapping_tcs.glsl  disp_mapping_tes.glsl  disp_mapping_vs.glsl  hello_teapot_fs.glsl  hello_teapot_vs.glsl  image_texturing_fs.glsl  image_texturing_vs.glsl  normal_mapping_fs.glsl  normal_mapping_vs.glsl  phong_lighting_fs.glsl  phong_lighting_vs.glsl  pn_triangles_fs.glsl  pn_triangles_tcs.glsl  pn_triangles_tes.glsl  pn_triangles_vs.glsl  shadow_mapping_first_fs.glsl  shadow_mapping_first_vs.glsl  shadow_mapping_second_fs.glsl  shadow_mapping_second_vs.glsl  tangent_mapping_fs.glsl  tangent_mapping_vs.glsl
app/src/main/cpp/: global.h  main.cpp  main.h
app/src/main/cpp/example/: arcball_rotation.cpp  arcball_rotation.h  cube_mapping.cpp  cube_mapping.h  disp_mapping.cpp  disp_mapping.h  hello_teapot.cpp  hello_teapot.h  image_texturing.cpp  image_texturing.h  list.h  normal_mapping.cpp  normal_mapping.h  phong_lighting.cpp  phong_lighting.h  pn_triangles.cpp  pn_triangles.h  shadow_mapping.cpp  shadow_mapping.h  tangent_mapping.cpp  tangent_mapping.h
app/src/main/cpp/render/: camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  object.cpp  object.h  program.cpp  program.h  shader.cpp  shader.h  target.cpp  target.h  texture.cpp  texture.h  uniform.cpp  uniform.h
app/src/main/cpp/utility/: asset.cpp  asset.h  input.cpp  input.h  picopng.cpp  picopng.h  scene.cpp  scene.h
app/src/main/java/kr/ac/korea/media/opengles/: ListActivity.java  MainActivity.java
app/src/main/res/layout/: activity_list.xml  list_item.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
